# inkscape-bim-scripts

./: README.md  pyproject.toml
scripts/: export_electrical.py  export_layers.py
scripts/one-off/: README.md  add_classes.py  process_labels.py  replace_ids.py
